--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
   		<form-error-page>/login-error.jsp</form-error-page>
   	</form-login-config> 
   </login-config>
-     
+        
   <security-constraint>
   	<web-resource-collection>
   		<web-resource-name>Sensitive</web-resource-name>
@@ -35,5 +35,14 @@
   <security-role>
   	<role-name>registeredUser</role-name>
   </security-role>
+  
+  <error-page>
+<error-code>404</error-code>
+<location>/index.jsp</location>
+</error-page>
+<error-page>
+<error-code>500</error-code>
+<location>/index.jsp</location>
+</error-page>
   
 </web-app>
